Implemented easy difficulty mode

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_medium_game">MediumGame</string>
     <string name="title_activity_game_screen">GameScreen</string>
+    <string name="title_activity_easy_game">EasyGame</string>
 
 </resources>
