--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,6 @@
     <string name="title_activity_game_screen">GameScreen</string>
     <string name="title_activity_easy_game">EasyGame</string>
     <string name="title_activity_hard_game">HardGame</string>
+    <string name="title_activity_picture_list">Select a Picture</string>
 
 </resources>
